--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
 				</dependencies>
 				<configuration>
 					<driver>com.mysql.cj.jdbc.Driver</driver>
-					<url>jdbc:mysql://localhost:3306/navtagdb</url>
+					<url>jdbc:mysql://localhost:3306/navtagdbTest</url>
 					<username>sa</username>
 					<password>sa</password>
 					<autocommit>true</autocommit>
@@ -100,7 +100,7 @@
 						</goals>
 						<configuration>
 							<srcFiles>
-								<srcFile>src/main/resources/schema.sql</srcFile>
+								<srcFile>src/test/resources/schema.sql</srcFile>
 							</srcFiles>
 						</configuration>
 					</execution>
